# compicc

./: AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  COPYING.md  ChangeLog  ChangeLog.md  README  README.md  colour_desktop.c  compicc.c  compicc.spec.in  compicc.xml  compicc_control.in  configure  configure_tests.sh  makefile.in
docu/: wiki.txt
